<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.actiontestscript</groupId>
	<artifactId>ats-automated-testing</artifactId>

	<version>1.1.5</version>
	<packaging>jar</packaging>

	<name>ats-automated-testing</name>
	<description>Code generator libs to create and execute automated tests</description>
	<url>https://github.com/pierrehub2b/actiontestscript</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Pierre Huber</name>
			<email>pierrehuber@yahoo.fr</email>
			<organization>ActionTestScript</organization>
			<organizationUrl>http://www.actiontestscript.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/pierrehub2b/actiontestscript.git</connection>
		<developerConnection>scm:git:ssh://github.com/pierrehub2b/actiontestscript.git</developerConnection>
		<url>https://github.com/pierrehub2b/actiontestscript.git</url>
	</scm>

	<repositories>
		<repository>
			<id>maven.atlassian.com</id>
			<name>atlassian</name>
			<url>https://maven.atlassian.com/3rdparty</url>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>OSSRH-37505</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>OSSRH-37505</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.9</java.version>

		<!-- libraries versions -->
		<apache.felix.version>2.3.7</apache.felix.version>
		<lib.jna.version>4.3.0</lib.jna.version>
		<lib.amf.serializer.version>2.2.0</lib.amf.serializer.version>
		<lib.itext.version>7.0.4</lib.itext.version>
		<lib.mxparser.version>4.1.1</lib.mxparser.version>
		<lib.selenium.version>3.9.1</lib.selenium.version>
		<lib.testng.version>6.13.1</lib.testng.version>
		<lib.gson.version>2.8.2</lib.gson.version>
		<lib.winium.element.version>LATEST</lib.winium.element.version>
		<lib.winium.webdriver.version>LATEST</lib.winium.webdriver.version>
		<lib.junit.version>LATEST</lib.junit.version>
		<lib.apache.ant.version>LATEST</lib.apache.ant.version>
		<lib.apache.cli.version>1.4</lib.apache.cli.version>

	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${lib.junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${lib.gson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${lib.testng.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<artifactId>selenium-api</artifactId>
			<groupId>org.seleniumhq.selenium</groupId>
			<version>${lib.selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>${lib.selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${lib.selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>${lib.jna.version}</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>${lib.jna.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>${lib.apache.ant.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.2gis.winium</groupId>
			<artifactId>winium-elements-desktop</artifactId>
			<version>${lib.winium.element.version}</version>
		</dependency>
		<dependency>
			<groupId>com.exadel.flamingo.flex</groupId>
			<artifactId>amf-serializer</artifactId>
			<version>${lib.amf.serializer.version}</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>kernel</artifactId>
			<version>${lib.itext.version}</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>layout</artifactId>
			<version>${lib.itext.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mariuszgromada.math</groupId>
			<artifactId>MathParser.org-mXparser</artifactId>
			<version>${lib.mxparser.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${lib.apache.cli.version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/alternateLocation</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${apache.felix.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.10,)
										</versionRange>
										<goals>
											<goal>
												copy-dependencies
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
